fix: styling issue when screen is too small to show browsing behavior rating

--- a/src/shared/components/dashboard/DashboardGroups.module.scss
+++ b/src/shared/components/dashboard/DashboardGroups.module.scss
@@ -2,69 +2,72 @@
 
 .DashboardGroups {
   max-width: 1600px;
-  display: grid;
-  text-align: center;
   position: absolute;
-  width: 100%;
-  top: 50%;
-  left: 50%;
-  max-height: 100%;
-  min-height: 50%;
-  transform: translate(-50%, -50%);
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  overflow-y: auto;
-  grid-auto-flow: row;
-  grid-auto-rows: 33%;
-  box-sizing: border-box;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  overflow: auto;
+
 
   @media (max-width: 999px) {
     grid-template-columns: repeat(2, 1fr) !important;
     min-height: 100%;
   }
-  @media (max-width: 799px) {
-    min-height: 100%;
-    grid-template-columns: repeat(1, 1fr) !important;
-  }
 
-  &[nr-of-items="1"] {
-    grid-template-rows: repeat(1, 1fr);
-    grid-template-columns: repeat(1, 1fr);
-  }
-
-  &[nr-of-items="2"] {
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(1, 1fr);
-  }
-
-  &[nr-of-items="3"] {
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(2, 1fr);
-
-    > :last-child {
-      grid-column-start: 1;
-      grid-column-end: 3;
-    }
-  }
-
-  &[nr-of-items="4"] {
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  &[nr-of-items="5"],
-  &[nr-of-items="6"] {
-    grid-template-rows: repeat(2, 1fr);
+  @media (min-width: 800px) {
+    display: grid;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    right: auto;
+    bottom: auto;
+    max-height: 100%;
+    min-height: 50%;
+    transform: translate(-50%, -50%);
     grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    overflow-y: auto;
+    grid-auto-flow: row;
+    grid-auto-rows: 33%;
+    box-sizing: border-box;
+
+    &[nr-of-items="1"] {
+      grid-template-rows: repeat(1, 1fr);
+      grid-template-columns: repeat(1, 1fr);
+    }
+
+    &[nr-of-items="2"] {
+      grid-template-rows: repeat(2, 1fr);
+      grid-template-columns: repeat(1, 1fr);
+    }
+
+    &[nr-of-items="3"] {
+      grid-template-rows: repeat(2, 1fr);
+      grid-template-columns: repeat(2, 1fr);
+
+      > :last-child {
+        grid-column-start: 1;
+        grid-column-end: 3;
+      }
+    }
+
+    &[nr-of-items="4"] {
+      grid-template-rows: repeat(2, 1fr);
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    &[nr-of-items="5"],
+    &[nr-of-items="6"] {
+      grid-template-rows: repeat(2, 1fr);
+      grid-template-columns: repeat(3, 1fr);
+    }
   }
 }
 
-
 .box {
-  display: flex;
-  flex-direction: column;
-  //justify-content: center;
-  align-items: center;
   animation: minded6622fadeInAnimation ease 2s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
@@ -82,8 +85,18 @@
   @include onSmallScreens() {
     animation-delay: 0s;
     animation-duration: .3s;
+    margin-bottom: 64px;
+  }
+
+  &.flexCenter {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 0;
   }
 }
+
 
 .standardHeading {
   @include h4();
@@ -109,6 +122,7 @@
   flex-direction: column;
   align-items: center;
   transform: translate3d(0, 0, 0);
+  display: none;
 
   .miniSun {
     position: absolute;
@@ -136,15 +150,20 @@
 .stats,
 .moodCheckinWidget,
 .energyLvl {
-  display: flex;
-  flex: 1;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  //display: flex;
+  //flex: 1;
+  //align-items: center;
+  //justify-content: center;
+  //flex-direction: column;
+  margin: auto;
 
   div:first-child {
     @include h4();
   }
+}
+
+.browsingBehaviorGraph {
+  overflow: hidden;
 }
 
 .energyLvl {
