--- a/src/styles/mixins/util.scss
+++ b/src/styles/mixins/util.scss
@@ -5,7 +5,13 @@
 }
 
 @mixin onSmallScreens() {
-  @media (max-width: 600px) {
+  @media (max-width: 599px) {
+    @content
+  }
+}
+
+@mixin onNonMobileScreens() {
+  @media (min-width: 600px) {
     @content
   }
 }
